# ML_Engineering_Labs

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: config.yaml
lab4_mlflow_tracking/: classification_report.txt  main.py  pyproject.toml
lab4_mlflow_tracking/config/: config.yaml
lab4_mlflow_tracking/mlruns/0/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/3c9d3ca3ddc9431b953344ca3e7994ff/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/3ce2aaae6f424ddf93060ffeb7118578/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/3ce2aaae6f424ddf93060ffeb7118578/metrics/: learning_rate  train_loss  val_acc
lab4_mlflow_tracking/mlruns/559489628123085523/3ce2aaae6f424ddf93060ffeb7118578/model/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/3ce2aaae6f424ddf93060ffeb7118578/params/: architecture
lab4_mlflow_tracking/mlruns/559489628123085523/3ce2aaae6f424ddf93060ffeb7118578/tags/: mlflow.runName
lab4_mlflow_tracking/mlruns/559489628123085523/b72ce18e21bd43408b47725d78aa2365/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/b72ce18e21bd43408b47725d78aa2365/tags/: mlflow.runName
lab4_mlflow_tracking/mlruns/559489628123085523/d270b333f8d843d49c30798b4ff736e8/: meta.yaml
lab4_mlflow_tracking/mlruns/559489628123085523/d270b333f8d843d49c30798b4ff736e8/artifacts/: classification_report.txt
lab4_mlflow_tracking/mlruns/559489628123085523/d270b333f8d843d49c30798b4ff736e8/metrics/: learning_rate  train_loss  val_acc
lab4_mlflow_tracking/mlruns/559489628123085523/d270b333f8d843d49c30798b4ff736e8/tags/: mlflow.runName  mlflow.source.git.commit
lab4_mlflow_tracking/mlruns/559489628123085523/d4ba240a5b424b719d68697495e63a4c/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/11c6f7b3498948e6918584f1af2beae8/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/4dbac8b23930407bb0fbb397f7a44a0b/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/757cd149c01c406f8ed929fe509d1897/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/7804e77235b64275af110af96df24d6d/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/841a9acd94da4cc4941c90c76bddb084/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/9e8ecc03ed664827aad96e28329517f9/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/a7f9929dfdc449d0ad8190d3b23ab2d9/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/d25cd9600e8645489424e460eb8d0534/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/de51a629917d4e7ab9a0746b6483e407/: meta.yaml
lab4_mlflow_tracking/mlruns/707101454064762818/f2c39274465b49b7ac993ca9c1139ae6/: meta.yaml
lab4_mlflow_tracking/src/: data.py  engine.py
lab6_streamlit_dashboard/: README.md  app.py  create_demo_data.py  force_generate_predictions.py  generate_all_predictions.py  pyproject.toml  requirements.txt
lab6_streamlit_dashboard/.streamlit/: config.toml
lab6_streamlit_dashboard/config/: dashboard_config.yaml  demo_registry.csv
lab6_streamlit_dashboard/src/: analytics.py  data_loader.py  explainability.py  inference.py  mlflow_utils.py  model_new.py  ui_components.py  utils.py
(+155 files in other folders)
